deploy: 7fb4ee55f0f2fbd0e1eb12d745b96a78e7cfe14e

--- a/_modules/gstaichi/lang/ast/ast_transformer.html
+++ b/_modules/gstaichi/lang/ast/ast_transformer.html
@@ -354,6 +354,11 @@
 <span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi.types</span><span class="w"> </span><span class="kn">import</span> <span class="n">primitive_types</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi.types.utils</span><span class="w"> </span><span class="kn">import</span> <span class="n">is_integral</span>
 
+<div class="viewcode-block" id="AutodiffMode">
+<a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer/index.html#gstaichi.lang.ast.ast_transformer.AutodiffMode">[docs]</a>
+<span class="n">AutodiffMode</span> <span class="o">=</span> <span class="n">_ti_core</span><span class="o">.</span><span class="n">AutodiffMode</span></div>
+
+
 
 <div class="viewcode-block" id="reshape_list">
 <a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer/index.html#gstaichi.lang.ast.ast_transformer.reshape_list">[docs]</a>
@@ -1400,7 +1405,9 @@
 
             <span class="n">for_di</span> <span class="o">=</span> <span class="n">_ti_core</span><span class="o">.</span><span class="n">DebugInfo</span><span class="p">(</span><span class="n">ctx</span><span class="o">.</span><span class="n">get_pos_info</span><span class="p">(</span><span class="n">node</span><span class="p">))</span>
             <span class="n">ctx</span><span class="o">.</span><span class="n">ast_builder</span><span class="o">.</span><span class="n">begin_frontend_range_for</span><span class="p">(</span><span class="n">loop_var</span><span class="o">.</span><span class="n">ptr</span><span class="p">,</span> <span class="n">begin</span><span class="o">.</span><span class="n">ptr</span><span class="p">,</span> <span class="n">end</span><span class="o">.</span><span class="n">ptr</span><span class="p">,</span> <span class="n">for_di</span><span class="p">)</span>
+            <span class="n">ctx</span><span class="o">.</span><span class="n">loop_depth</span> <span class="o">+=</span> <span class="mi">1</span>
             <span class="n">build_stmts</span><span class="p">(</span><span class="n">ctx</span><span class="p">,</span> <span class="n">node</span><span class="o">.</span><span class="n">body</span><span class="p">)</span>
+            <span class="n">ctx</span><span class="o">.</span><span class="n">loop_depth</span> <span class="o">-=</span> <span class="mi">1</span>
             <span class="n">ctx</span><span class="o">.</span><span class="n">ast_builder</span><span class="o">.</span><span class="n">end_frontend_range_for</span><span class="p">()</span>
         <span class="k">return</span> <span class="kc">None</span></div>
 
@@ -1446,7 +1453,9 @@
                 <span class="p">)</span>
                 <span class="k">if</span> <span class="n">i</span> <span class="o">+</span> <span class="mi">1</span> <span class="o">&lt;</span> <span class="nb">len</span><span class="p">(</span><span class="n">targets</span><span class="p">):</span>
                     <span class="n">I</span><span class="o">.</span><span class="n">_assign</span><span class="p">(</span><span class="n">I</span> <span class="o">-</span> <span class="n">target_tmp</span> <span class="o">*</span> <span class="n">ndrange_var</span><span class="o">.</span><span class="n">acc_dimensions</span><span class="p">[</span><span class="n">i</span> <span class="o">+</span> <span class="mi">1</span><span class="p">])</span>
+            <span class="n">ctx</span><span class="o">.</span><span class="n">loop_depth</span> <span class="o">+=</span> <span class="mi">1</span>
             <span class="n">build_stmts</span><span class="p">(</span><span class="n">ctx</span><span class="p">,</span> <span class="n">node</span><span class="o">.</span><span class="n">body</span><span class="p">)</span>
+            <span class="n">ctx</span><span class="o">.</span><span class="n">loop_depth</span> <span class="o">-=</span> <span class="mi">1</span>
             <span class="n">ctx</span><span class="o">.</span><span class="n">ast_builder</span><span class="o">.</span><span class="n">end_frontend_range_for</span><span class="p">()</span>
         <span class="k">return</span> <span class="kc">None</span></div>
 
@@ -1483,7 +1492,9 @@
                 <span class="n">impl</span><span class="o">.</span><span class="n">subscript</span><span class="p">(</span><span class="n">ctx</span><span class="o">.</span><span class="n">ast_builder</span><span class="p">,</span> <span class="n">target_var</span><span class="p">,</span> <span class="n">i</span><span class="p">)</span><span class="o">.</span><span class="n">_assign</span><span class="p">(</span><span class="n">target_tmp</span> <span class="o">+</span> <span class="n">ndrange_var</span><span class="o">.</span><span class="n">bounds</span><span class="p">[</span><span class="n">i</span><span class="p">][</span><span class="mi">0</span><span class="p">])</span>
                 <span class="k">if</span> <span class="n">i</span> <span class="o">+</span> <span class="mi">1</span> <span class="o">&lt;</span> <span class="nb">len</span><span class="p">(</span><span class="n">ndrange_var</span><span class="o">.</span><span class="n">dimensions</span><span class="p">):</span>
                     <span class="n">I</span><span class="o">.</span><span class="n">_assign</span><span class="p">(</span><span class="n">I</span> <span class="o">-</span> <span class="n">target_tmp</span> <span class="o">*</span> <span class="n">ndrange_var</span><span class="o">.</span><span class="n">acc_dimensions</span><span class="p">[</span><span class="n">i</span> <span class="o">+</span> <span class="mi">1</span><span class="p">])</span>
+            <span class="n">ctx</span><span class="o">.</span><span class="n">loop_depth</span> <span class="o">+=</span> <span class="mi">1</span>
             <span class="n">build_stmts</span><span class="p">(</span><span class="n">ctx</span><span class="p">,</span> <span class="n">node</span><span class="o">.</span><span class="n">body</span><span class="p">)</span>
+            <span class="n">ctx</span><span class="o">.</span><span class="n">loop_depth</span> <span class="o">-=</span> <span class="mi">1</span>
             <span class="n">ctx</span><span class="o">.</span><span class="n">ast_builder</span><span class="o">.</span><span class="n">end_frontend_range_for</span><span class="p">()</span>
         <span class="k">return</span> <span class="kc">None</span></div>
 
@@ -1520,7 +1531,9 @@
                 <span class="n">loop_var</span> <span class="o">=</span> <span class="n">node</span><span class="o">.</span><span class="n">iter</span><span class="o">.</span><span class="n">ptr</span>
                 <span class="n">expr_group</span> <span class="o">=</span> <span class="n">expr</span><span class="o">.</span><span class="n">make_expr_group</span><span class="p">(</span><span class="o">*</span><span class="n">_vars</span><span class="p">)</span>
                 <span class="n">impl</span><span class="o">.</span><span class="n">begin_frontend_struct_for</span><span class="p">(</span><span class="n">ctx</span><span class="o">.</span><span class="n">ast_builder</span><span class="p">,</span> <span class="n">expr_group</span><span class="p">,</span> <span class="n">loop_var</span><span class="p">)</span>
+                <span class="n">ctx</span><span class="o">.</span><span class="n">loop_depth</span> <span class="o">+=</span> <span class="mi">1</span>
                 <span class="n">build_stmts</span><span class="p">(</span><span class="n">ctx</span><span class="p">,</span> <span class="n">node</span><span class="o">.</span><span class="n">body</span><span class="p">)</span>
+                <span class="n">ctx</span><span class="o">.</span><span class="n">loop_depth</span> <span class="o">-=</span> <span class="mi">1</span>
                 <span class="n">ctx</span><span class="o">.</span><span class="n">ast_builder</span><span class="o">.</span><span class="n">end_frontend_struct_for</span><span class="p">()</span>
         <span class="k">return</span> <span class="kc">None</span></div>
 
@@ -1546,7 +1559,9 @@
                 <span class="n">node</span><span class="o">.</span><span class="n">iter</span><span class="o">.</span><span class="n">ptr</span><span class="o">.</span><span class="n">_type</span><span class="p">,</span>
                 <span class="n">_ti_core</span><span class="o">.</span><span class="n">DebugInfo</span><span class="p">(</span><span class="n">impl</span><span class="o">.</span><span class="n">get_runtime</span><span class="p">()</span><span class="o">.</span><span class="n">get_current_src_info</span><span class="p">()),</span>
             <span class="p">)</span>
+            <span class="n">ctx</span><span class="o">.</span><span class="n">loop_depth</span> <span class="o">+=</span> <span class="mi">1</span>
             <span class="n">build_stmts</span><span class="p">(</span><span class="n">ctx</span><span class="p">,</span> <span class="n">node</span><span class="o">.</span><span class="n">body</span><span class="p">)</span>
+            <span class="n">ctx</span><span class="o">.</span><span class="n">loop_depth</span> <span class="o">-=</span> <span class="mi">1</span>
             <span class="n">ctx</span><span class="o">.</span><span class="n">mesh</span> <span class="o">=</span> <span class="kc">None</span>
             <span class="n">ctx</span><span class="o">.</span><span class="n">ast_builder</span><span class="o">.</span><span class="n">end_frontend_mesh_for</span><span class="p">()</span>
         <span class="k">return</span> <span class="kc">None</span></div>
@@ -1580,7 +1595,9 @@
             <span class="n">entry_expr</span><span class="o">.</span><span class="n">type_check</span><span class="p">(</span><span class="n">impl</span><span class="o">.</span><span class="n">get_runtime</span><span class="p">()</span><span class="o">.</span><span class="n">prog</span><span class="o">.</span><span class="n">config</span><span class="p">())</span>
             <span class="n">mesh_idx</span> <span class="o">=</span> <span class="n">mesh</span><span class="o">.</span><span class="n">MeshElementFieldProxy</span><span class="p">(</span><span class="n">ctx</span><span class="o">.</span><span class="n">mesh</span><span class="p">,</span> <span class="n">node</span><span class="o">.</span><span class="n">iter</span><span class="o">.</span><span class="n">ptr</span><span class="o">.</span><span class="n">to_element_type</span><span class="p">,</span> <span class="n">entry_expr</span><span class="p">)</span>
             <span class="n">ctx</span><span class="o">.</span><span class="n">create_variable</span><span class="p">(</span><span class="n">target</span><span class="p">,</span> <span class="n">mesh_idx</span><span class="p">)</span>
+            <span class="n">ctx</span><span class="o">.</span><span class="n">loop_depth</span> <span class="o">+=</span> <span class="mi">1</span>
             <span class="n">build_stmts</span><span class="p">(</span><span class="n">ctx</span><span class="p">,</span> <span class="n">node</span><span class="o">.</span><span class="n">body</span><span class="p">)</span>
+            <span class="n">ctx</span><span class="o">.</span><span class="n">loop_depth</span> <span class="o">-=</span> <span class="mi">1</span>
             <span class="n">ctx</span><span class="o">.</span><span class="n">ast_builder</span><span class="o">.</span><span class="n">end_frontend_range_for</span><span class="p">()</span>
 
         <span class="k">return</span> <span class="kc">None</span></div>
@@ -1621,6 +1638,8 @@
                 <span class="ow">and</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">node</span><span class="o">.</span><span class="n">iter</span><span class="o">.</span><span class="n">func</span><span class="p">,</span> <span class="n">ast</span><span class="o">.</span><span class="n">Name</span><span class="p">)</span>
                 <span class="ow">and</span> <span class="n">node</span><span class="o">.</span><span class="n">iter</span><span class="o">.</span><span class="n">func</span><span class="o">.</span><span class="n">id</span> <span class="o">==</span> <span class="s2">&quot;range&quot;</span>
             <span class="p">):</span>
+                <span class="k">if</span> <span class="n">ctx</span><span class="o">.</span><span class="n">loop_depth</span> <span class="o">&gt;</span> <span class="mi">0</span> <span class="ow">and</span> <span class="n">ctx</span><span class="o">.</span><span class="n">autodiff_mode</span> <span class="o">==</span> <span class="n">AutodiffMode</span><span class="o">.</span><span class="n">REVERSE</span> <span class="ow">and</span> <span class="ow">not</span> <span class="n">ctx</span><span class="o">.</span><span class="n">adstack_enabled</span><span class="p">:</span>
+                    <span class="k">raise</span> <span class="n">exception</span><span class="o">.</span><span class="n">GsTaichiCompilationError</span><span class="p">(</span><span class="s2">&quot;Cannot use non static range in Backwards mode&quot;</span><span class="p">)</span>
                 <span class="k">return</span> <span class="n">ASTTransformer</span><span class="o">.</span><span class="n">build_range_for</span><span class="p">(</span><span class="n">ctx</span><span class="p">,</span> <span class="n">node</span><span class="p">)</span>
             <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">node</span><span class="o">.</span><span class="n">iter</span><span class="p">,</span> <span class="n">ast</span><span class="o">.</span><span class="n">IfExp</span><span class="p">):</span>
                 <span class="c1"># Handle inline if expression as the top level iterator expression, e.g.:</span>
