--- a/genindex.html
+++ b/genindex.html
@@ -352,6 +352,8 @@
 </li>
       <li><a href="autoapi/gstaichi/tools/np2ply/index.html#gstaichi.tools.np2ply.PLYWriter.add_vertex_vel">add_vertex_vel() (gstaichi.tools.np2ply.PLYWriter method)</a>
 </li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.adstack_enabled">adstack_enabled (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
+</li>
       <li><a href="autoapi/gstaichi/lang/matrix/index.html#gstaichi.lang.matrix.Matrix.all">all() (gstaichi.lang.matrix.Matrix method)</a>
 
       <ul>
@@ -382,10 +384,10 @@
       </ul></li>
       <li><a href="autoapi/gstaichi/lang/simt/warp/index.html#gstaichi.lang.simt.warp.any_nonzero">any_nonzero() (in module gstaichi.lang.simt.warp)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/simt/subgroup/index.html#gstaichi.lang.simt.subgroup.any_true">any_true() (in module gstaichi.lang.simt.subgroup)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/snode/index.html#gstaichi.lang.snode.append">append() (in module gstaichi.lang.snode)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/simt/block/index.html#gstaichi.lang.simt.block.arch_uses_spv">arch_uses_spv() (in module gstaichi.lang.simt.block)</a>
@@ -444,8 +446,16 @@
 </li>
       <li><a href="autoapi/gstaichi/lang/ops/index.html#gstaichi.lang.ops.atomic_xor">atomic_xor() (in module gstaichi.lang.ops)</a>
 </li>
-      <li><a href="autoapi/gstaichi/types/enums/index.html#gstaichi.types.enums.AutodiffMode">AutodiffMode (in module gstaichi.types.enums)</a>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.autodiff_mode">autodiff_mode (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
 </li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer/index.html#gstaichi.lang.ast.ast_transformer.AutodiffMode">AutodiffMode (in module gstaichi.lang.ast.ast_transformer)</a>
+
+      <ul>
+        <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.AutodiffMode">(in module gstaichi.lang.ast.ast_transformer_utils)</a>
+</li>
+        <li><a href="autoapi/gstaichi/types/enums/index.html#gstaichi.types.enums.AutodiffMode">(in module gstaichi.types.enums)</a>
+</li>
+      </ul></li>
       <li><a href="autoapi/gstaichi/lang/impl/index.html#gstaichi.lang.impl.axes">axes() (in module gstaichi.lang.impl)</a>
 </li>
   </ul></td>
@@ -1598,10 +1608,10 @@
 </li>
       <li><a href="autoapi/gstaichi/types/primitive_types/index.html#gstaichi.types.primitive_types.int16">int16 (in module gstaichi.types.primitive_types)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/types/primitive_types/index.html#gstaichi.types.primitive_types.int32">int32 (in module gstaichi.types.primitive_types)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/types/primitive_types/index.html#gstaichi.types.primitive_types.int64">int64 (in module gstaichi.types.primitive_types)</a>
 </li>
       <li><a href="autoapi/gstaichi/types/primitive_types/index.html#gstaichi.types.primitive_types.int8">int8 (in module gstaichi.types.primitive_types)</a>
@@ -1615,6 +1625,8 @@
 </li>
       </ul></li>
       <li><a href="autoapi/gstaichi/lang/snode/index.html#gstaichi.lang.snode.is_active">is_active() (in module gstaichi.lang.snode)</a>
+</li>
+      <li><a href="autoapi/gstaichi/lang/misc/index.html#gstaichi.lang.misc.is_extension_enabled">is_extension_enabled() (in module gstaichi.lang.misc)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.NonStaticControlFlowStatus.is_in_non_static_control_flow">is_in_non_static_control_flow (gstaichi.lang.ast.ast_transformer_utils.NonStaticControlFlowStatus attribute)</a>
 </li>
@@ -1742,10 +1754,10 @@
       </ul></li>
       <li><a href="autoapi/gstaichi/linalg/matrixfree_cg/index.html#gstaichi.linalg.matrixfree_cg.LinearOperator">LinearOperator (class in gstaichi.linalg.matrixfree_cg)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.lineno_offset">lineno_offset (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/mesh/index.html#gstaichi.lang.mesh.Mesh.load_meta">load_meta() (gstaichi.lang.mesh.Mesh static method)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.local_scopes">local_scopes (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
@@ -1757,6 +1769,8 @@
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.NonStaticIfGuard.loop_attribute">loop_attribute (gstaichi.lang.ast.ast_transformer_utils.NonStaticIfGuard attribute)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/misc/index.html#gstaichi.lang.misc.loop_config">loop_config() (in module gstaichi.lang.misc)</a>
+</li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.loop_depth">loop_depth (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.loop_scope_guard">loop_scope_guard() (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext method)</a>
 </li>
