--- a/genindex.html
+++ b/genindex.html
@@ -2243,6 +2243,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/math/mathimpl/index.html#gstaichi.math.mathimpl.radians">radians() (in module gstaichi.math.mathimpl)</a>
 </li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.raise_on_templated_floats">raise_on_templated_floats (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
+</li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.raised">raised (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ops/index.html#gstaichi.lang.ops.random">random() (in module gstaichi.lang.ops)</a>
@@ -2279,10 +2281,10 @@
 </li>
       <li><a href="autoapi/gstaichi/lang/mesh/index.html#gstaichi.lang.mesh.MeshInstance.relation_set">relation_set (gstaichi.lang.mesh.MeshInstance attribute)</a>
 </li>
-      <li><a href="autoapi/gstaichi/lang/snode/index.html#gstaichi.lang.snode.rescale_index">rescale_index() (in module gstaichi.lang.snode)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/gstaichi/lang/snode/index.html#gstaichi.lang.snode.rescale_index">rescale_index() (in module gstaichi.lang.snode)</a>
+</li>
       <li><a href="autoapi/gstaichi/lang/misc/index.html#gstaichi.lang.misc.reset">reset() (in module gstaichi.lang.misc)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer/index.html#gstaichi.lang.ast.ast_transformer.reshape_list">reshape_list() (in module gstaichi.lang.ast.ast_transformer)</a>
